--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -721,17 +721,23 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 [width="59%",cols="22%,<23%,<25%,<30%",options="header",]
 |=======================================================================
 |Priority |As a ... |I want to ... |So that I can...
-|`* * *` |new user |see usage instructions |refer to instructions when I forget how to use the App
+|`* * *` |user |edit the existing information stored in the database|the information can be up-to-date
 
-|`* * *` |user |add a new person |
+|`* * *` |user |undo a command | correct the mistake I made accidentally
 
-|`* * *` |user |delete a person |remove entries that I no longer need
+|`* * *` |user |import information from FaceBook |save me the effort to add friends' information
 
-|`* * *` |user |find a person by name |locate details of persons without having to go through the entire list
+|`* * *` |user |add date of birth of a person |remember the birthday of my friends
 
-|`* *` |user |hide link:#private-contact-detail[private contact details] by default |minimize chance of someone else seeing them by accident
+|`*` |user |sort persons by date of birth |see a list of people from youngest to oldest or oldest to youngest
 
-|`*` |user with many persons in the address book |sort persons by name |locate a person easily
+|`* *` |user with many persons in the address book |sort persons by name |locate a person easily
+
+|`* *` |user with many persons in the address book |sort persons by date of insertion |see latest inserted persons
+
+|`* * *` |user |see person's social media page in AddressBook|check persons's social media page easily and directly in one app
+
+|`* * *` |user added many tags to persons|customize tag colour|visualize different tag by its color
 |=======================================================================
 
 {More to be added}
