--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -773,7 +773,60 @@ Use case ends.
 +
 Use case resumes at step 2.
 
-{More to be added}
+[discrete]
+=== Use case: Edit person
+
+*MSS*
+
+1.  User requests to edit persons
+2.  AddressBook shows a list of persons
+3.  User requests to edit information of a specific person in the list
+4.  AddressBook edits the person
++
+Use case ends.
+
+*Extensions*
+
+[none]
+* 2a. The list is empty.
++
+Use case ends.
+
+* 3a. The given index is invalid.
++
+[none]
+** 3a1. AddressBook shows an error message.
++
+Use case resumes at step 2.
+
+[discrete]
+=== Use case: Change color of a tag
+
+*MSS*
+
+1.  User requests to change a tag to another color
+2.  AddressBook changes the color of the tag
++
+Use case ends.
+
+*Extensions*
+
+[none]
+* 2a. The given tag does not exist.
++
+[none]
+** 2a1. AddressBook shows an error message.
++
+Use case ends.
+
+[none]
+* 2b. The given color is not available.
++
+[none]
+** 2b1. AddressBook shows an error message.
++
+Use case ends.
+
 
 [appendix]
 == Non Functional Requirements
