--- a/README.adoc
+++ b/README.adoc
@@ -20,6 +20,7 @@ endif::[]
 * It is *written in OOP fashion*. It provides a *reasonably well-written* code example that is *significantly bigger* (around 6 KLoC)than what students usually write in beginner-level SE modules.
 * What's different from https://github.com/se-edu/addressbook-level3[level 3]:
 ** A more sophisticated GUI that includes a list  panel and an in-built Browser.
+** More details about each user like Date Of Birth.
 ** More test cases, including automated GUI testing.
 ** Support for _Build Automation_ using Gradle and for _Continuous Integration_ using Travis CI.
 
@@ -35,5 +36,7 @@ endif::[]
 
 * Some parts of this sample application were inspired by the excellent http://code.makery.ch/library/javafx-8-tutorial/[Java FX tutorial] by
 _Marco Jakob_.
+
+* A large part of the existing codebase was given to us developers by AddressBook-Level4 created by SE-EDU initiative at https://github.com/se-edu/ .
 
 == Licence : link:LICENSE[MIT]
