--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -112,6 +112,25 @@ Returns `john` and `John Doe`
 * `find Betsy Tim John` +
 Returns any person having names `Betsy`, `Tim`, or `John`
 
+=== Searching a person : `search`
+
+Lists persons with the given name and Date Of Birth.
+Format: `search NAME DATE_OF_BIRTH`
+
+image::docs/images/EmailThem.png[width="600"]
+
+****
+* The search is case-insensitive. e.g `hans` will match `Hans`
+* The order of keywords matter. e.g. in `search Hans 13.10.1997` Hans and 13.10.1997 cannot be interchanged
+* Only full words will be matched e.g. `Han` will not match `Hans`
+* Persons matching both name and Date Of Birth will be returned.
+****
+
+Examples:
+
+* `search John 13.10.1997` +
+Returns persons with name `John` and Date of Birth `13.10.1997`.
+
 === Deleting a person : `delete`
 
 Deletes the specified person from the address book. +
