--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@ https://coveralls.io/github/se-edu/addressbook-level4?branch=master[image:https:
 
 
 ifdef::env-github[]
-image::docs/images/Presentation.pptx[width="600"]
+image::docs/images/ronaklakhotia.png[width="600"]
 endif::[]
 
 ifndef::env-github[]
