--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -135,6 +135,26 @@ Returns `John Doe` and `Hans Gruber`
 * `find/t friends colleagues` +
 Returns any person having tags `Friends` or `Colleagues`
 
+
+=== Searching a person : `search`
+
+Lists persons with the given name and Date Of Birth.
+Format: `search NAME DATE_OF_BIRTH`
+
+image::docs/images/Search.png[width="600"]
+
+****
+* The search is case-insensitive. e.g `hans` will match `Hans`
+* The order of keywords matter. e.g. in `search Hans 13.10.1997` Hans and 13.10.1997 cannot be interchanged
+* Only full words will be matched e.g. `Han` will not match `Hans`
+* Persons matching both name and Date Of Birth will be returned.
+****
+
+Examples:
+
+* `search John 13.10.1997` +
+Returns persons with name `John` and Date of Birth `13.10.1997`.
+
 === Deleting a person : `delete`
 
 Deletes the specified person from the address book. +
@@ -267,6 +287,16 @@ Format: `clear`
 
 Exits the program. +
 Format: `exit`
+
+=== Coming in V2.0
+
+image::EmailThem.png[width="600"]
+
+* Add a notification system to notify users about upcoming birthdays +
+* Send Email Intents to contacts +
+* Social Integration +
+* Have a favourites list +
+* Be able to view contacts frequently viewed +
 
 === Saving the data
 
