--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= Address Book (Level 4)
+= Weaver (Level 4)
 ifdef::env-github,env-browser[:relfileprefix: docs/]
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
@@ -7,12 +7,8 @@ https://ci.appveyor.com/project/damithc/addressbook-level4[image:https://ci.appv
 https://coveralls.io/github/se-edu/addressbook-level4?branch=master[image:https://coveralls.io/repos/github/se-edu/addressbook-level4/badge.svg?branch=master[Coverage Status]]
 
 
-ifdef::env-github[]
-image::docs/images/Ui.png[width="600"]
-endif::[]
-
 ifndef::env-github[]
-image::images/Ui.png[width="600"]
+image::images/presentation.png[width="600"]
 endif::[]
 
 * This is a desktop Address Book application. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface).
