--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@ https://coveralls.io/github/se-edu/addressbook-level4?branch=master[image:https:
 
 
 ifndef::env-github[]
-image::images/presentation.png[width="600"]
+image::images/Present.png[width="600"]
 endif::[]
 
 * This is a desktop Address Book application. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface).
