--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -12,7 +12,9 @@ ifdef::env-github[]
 endif::[]
 :repoURL: https://github.com/se-edu/addressbook-level4
 
-By: `Team SE-EDU`      Since: `Jun 2016`      Licence: `MIT`
+By: `W13-B2`      Since: `Aug 2017`      Licence: `MIT`
+
+image::Present.png[width="790"]
 
 == Quick Start
 
@@ -135,13 +137,13 @@ Returns `John Doe` and `Hans Gruber`
 * `find/t friends colleagues` +
 Returns any person having tags `Friends` or `Colleagues`
 
+image::Search.png[width="600"]
 
 === Searching a person : `search`
 
 Lists persons with the given name and Date Of Birth.
 Format: `search NAME DATE_OF_BIRTH`
 
-image::docs/images/Search.png[width="600"]
 
 ****
 * The search is case-insensitive. e.g `hans` will match `Hans`
