--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
-= Weaver (Level 4)
+image::docs/images/Present.png[width="790"]
 
-image::Present.png[width="500"]
+= Weaver (Level 4)
 
 ifdef::env-github,env-browser[:relfileprefix: docs/]
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
@@ -8,7 +8,6 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 https://travis-ci.org/se-edu/addressbook-level4[image:https://travis-ci.org/se-edu/addressbook-level4.svg?branch=master[Build Status]]
 https://ci.appveyor.com/project/damithc/addressbook-level4[image:https://ci.appveyor.com/api/projects/status/3boko2x2vr5cc3w2?svg=true[Build status]]
 https://coveralls.io/github/se-edu/addressbook-level4?branch=master[image:https://coveralls.io/repos/github/se-edu/addressbook-level4/badge.svg?branch=master[Coverage Status]]
-
 
 ifndef::env-github[]
 endif::[]
