--- a/README.adoc
+++ b/README.adoc
@@ -5,7 +5,7 @@ image::docs/images/Present.png[width="790"]
 ifdef::env-github,env-browser[:relfileprefix: docs/]
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-https://https://travis-ci.org/CS2103T-W13-B2/main[image:https://travis-ci.org/CS2103T-W13-B2/main.svg?branch=master[Build Status]]
+image:https://travis-ci.org/CS2103AUG2017-W13-B2/main.svg?branch=master["Build Status", link="https://travis-ci.org/CS2103AUG2017-W13-B2/main"]
 https://ci.appveyor.com/project/damithc/addressbook-level4[image:https://ci.appveyor.com/api/projects/status/3boko2x2vr5cc3w2?svg=true[Build status]]
 https://coveralls.io/github/se-edu/addressbook-level4?branch=master[image:https://coveralls.io/repos/github/se-edu/addressbook-level4/badge.svg?branch=master[Coverage Status]]
 
