--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -123,7 +123,7 @@ Format: `find/t KEYWORD [MORE_KEYWORDS]`
 Make sure there are no whitespaces between `find` and `/t`!
 
 ****
-* Given three samples `John Doe` with tag `Friends`, `Hans Gruber` with tag `Friends`, and `Bo Yang` with tag `Colleagues`
+* Given three people with tags: `John Doe t/Friends`, `Hans Gruber t/Friends`, and `Bo Yang t/Colleagues`
 * The search is case insensitive. e.g `friends` will match `Friends`
 * All the tags are searched.
 * Only full words will be matched e.g. `Friend` will not match `Friends`
@@ -176,6 +176,29 @@ Deletes the 2nd person in the address book.
 * `find Betsy` +
 `delete 1` +
 Deletes the 1st person in the results of the `find` command.
+
+=== Deleting a person's tag : `delete/t`
+
+Deletes the tag(s) of an existing person in the address book. +
+Format: `delete/t INDEX [t/TAG]...`
+
+****
+* Deletes the tag of the person at the specified `INDEX`. The index refers to the index number shown in the last person listing. The index *must be a positive integer* 1, 2, 3, ...
+* The search is case insensitive. e.g `friends` will match `Friends`
+* Only full words will be matched e.g. `Friend` will not match `Friends`
+* At least one of the tag fields must be provided.
+****
+
+Examples:
+
+* `delete/t 1 t/friends` +
+Deletes the tag `friends` from the person index `1`.
+* `delete/t 2 t/friends t/colleagues` +
+Deletes the tag `friends` and `colleagues` from the person index `2`.
+
+[TIP]
+You can remove all the person's tags by typing `edit INDEX t/` without specifying any tags after it.
+Refer to the link:#edit[Edit] section above for more details.
 
 === Selecting a person : `select`
 
@@ -335,6 +358,8 @@ e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 123466
 * *Clear* : `clear`
 * *Delete* : `delete INDEX` +
 e.g. `delete 3`
+* *Delete Person's Tags* : `delete/t INDEX [t/TAG]...` +
+e.g. `delete/t 3 t/colleagues`
 * *Edit* : `edit INDEX [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [b/DATE_OF_BIRTH] [t/TAG]...` +
 e.g. `edit 2 n/James Lee e/jameslee@example.com`
 * *Find* : `find KEYWORD [MORE_KEYWORDS]` +
