Update of documents

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -14,7 +14,6 @@ endif::[]
 
 By: `W13-B2`      Since: `Aug 2017`      Licence: `MIT`
 
-image::Present.png[width="790"]
 
 == Quick Start
 
@@ -28,6 +27,10 @@ This app will not work with earlier versions of Java 8.
 .  Copy the file to the folder you want to use as the home folder for your Address Book.
 .  Double-click the file to start the app. The GUI should appear in a few seconds.
 +
+image::login.png[width="790"]
+
+. After login, you will see the GUI below.
+
 image::Ui.png[width="790"]
 +
 .  Type the command in the command box and press kbd:[Enter] to execute it. +
