--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -345,6 +345,87 @@ image::UndoRedoActivityDiagram.png[width="200"]
 **Cons:** Requires dealing with commands that have already been undone: We must remember to skip these commands. Violates Single Responsibility Principle and Separation of Concerns as `HistoryManager` now needs to do two different things. +
 // end::undoredo[]
 
+=== login / logout mechanism
+
+The login / logout mechanism is a page which requires user to key in his username and password before he can use the addressbook. And Once he is logged in, there will be a automatically generated file named as "username + addressbook.xml" storing the information about his own addressbook.
+
+. It uses files whloginich stores the information of legal username and password pair to check whether the username and password key in by users are valid.
+
+image::login.png[width="800"]
+
+With the extra layer, the UiManager is calling login page before it calls the MainWindow:
+[source,java]
+----
+loginPage = new LoginPage(primaryStage, config, storage, prefs, logic, accPrefs);
+loginPage.show();
+//mainWindow = new MainWindow(primaryStage, config, storage, prefs, logic, accPrefs);
+//mainWindow.show(); //This should be called before creating other UI parts
+
+----
+
+The check mechanism is implemented in this way:
+[source,java]
+----
+private boolean checkValid(String username, String password) {
+        return accPrefs.getHm().get(username).equals(password);
+}
+----
+[NOTE]
+If user key in wrong user name or password, he will stuck at login page until he manages to get in.
+
+
+Read the account information from file and save them into a hashmap.
+[source,java]
+----
+public AccountsStorage setAccountMsg() throws DataConversionException, IOException {
+        String accountMsg = this.readAccountsPrefs(this.accountsPath).toString();
+        this.hm = makeMap(accountMsg);
+        return this;
+}
+
+----
+
+Logout is implemented using JavaFX.
+[source,java]
+----
+@FXML
+private void handleLogoutEvent() {
+    logger.info("Trying to logout");
+    this.hide();
+    this.releaseResources();
+    LoginPage loginPage = new LoginPage(primaryStage, config, storage, prefs, logic, accPrefs);
+    loginPage.show();
+}
+
+----
+
+image::logout.png[width="200"]
+
+==== Design Considerations
+
+**Aspect:** Implementation of `login / logout` feature +
+**Alternative 1 (current choice):** `login` is compulsory. User must login before he can use the addressbook  +
+**Pros:** Faster to implement. Not changing the structure of code. +
+**Cons:** Previous test cases need to be rewrote to get use to this new page. +
+**Alternative 2:** `login` is  optional. User can still use this addressbook without login. +
+**Pros:** Previous test cases can still be used. +
+**Cons:** Need to invoke `login page` from command level, which is very hard to implement. It changes a considerable
+part of structure of the whole code.
+
+---
+
+**Aspect:** User experiences  +
+**Alternative 1 (current choice):** `login` is compulsory. User must login before he can use the addressbook +
+**Pros:** Level of security is increased. Each user has a separate file to store addressbook. This software now support
+multiple users. +
+**Cons:** User needs an account to use this addressbook. Operation become one layer more complex. +
+**Alternative 2:** `login` is  optional. User can still use this addressbook without login.  +
+**Pros:** Multiple choices for users. More flexible. +
+**Cons:** The default page becomes public, anyone can read and modify it. +
+// end::undoredo[]
+
+---
+
 === Logging
 
 We are using `java.util.logging` package for logging. The `LogsCenter` class is used to manage the logging levels and logging destinations.
