--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -345,6 +345,111 @@ image::UndoRedoActivityDiagram.png[width="200"]
 **Cons:** Requires dealing with commands that have already been undone: We must remember to skip these commands. Violates Single Responsibility Principle and Separation of Concerns as `HistoryManager` now needs to do two different things. +
 // end::undoredo[]
 
+// tag::deletepersontag[]
+=== Deleting a Person's Tag mechanism
+
+The Deleting a Person's Tag mechanism consists of `DeleteTagCommand` and `DeleteTagCommandParser` classes.
+
+The `DeleteTagCommandParser` resides inside `LogicManager`.
+
+`DeleteTagCommandParser` only deals with `Parser`. It is created from `AddressBookParser`. The following diagram shows the flow for parser:
+
+image::LogicClassDiagram.png[width="800"]
+
+As you can see from the diagram, `XYZCommand Parser` inherits from the `Parser` interface and is created by the AddressBook Parser as the `DeleteTagCommandParser`. Note that the tags are parsed under `parseTagsForDelete`, while the person index is parsed under `parse` before execution. The tags are identified by the prefix `t/` to be parsed for deletion, and it must be fully matched.
+
+The `DeleteTagCommand` resides inside `LogicManager`. It supports undoing and redoing of that modifies the state of Weaver. Such commands will inherit from `UndoableCommand`.
+
+`DeleteTagCommand` only deals with `UndoableCommands`. Commands that cannot be undone will inherit from `Command` instead. The following diagram shows the inheritance diagram for commands:
+
+image::LogicCommandClassDiagram.png[width="800"]
+
+As you can see from the diagram, `UndoableCommand` adds an extra layer between the abstract `Command` class and concrete commands that can be undone, such as the `DeleteTagCommand`. Note that extra tasks need to be done when executing a command in an _undoable_ way, such as saving the state of the address book before execution. `UndoableCommand` contains the high-level algorithm for those extra tasks while the child classes implements the details of how to execute the specific command. Note that this technique of putting the high-level algorithm in the parent class and lower-level steps of the algorithm in child classes is also known as the https://www.tutorialspoint.com/design_pattern/template_pattern.htm[template pattern].
+
+Commands that are not undoable are implemented this way:
+[source,java]
+----
+public class ListCommand extends Command {
+    @Override
+    public CommandResult execute() {
+        // ... list logic ...
+    }
+}
+----
+With the extra layer, the commands that are undoable are implemented this way:
+[source,java]
+----
+public abstract class UndoableCommand extends Command {
+    @Override
+    public CommandResult execute() {
+        // ... undo logic ...
+
+        executeUndoableCommand();
+    }
+}
+
+public class DeleteTagCommand extends UndoableCommand {
+    @Override
+    public CommandResult executeUndoableCommand() {
+        // ... delete logic ...
+    }
+}
+----
+
+Inside the `DeleteTagCommand` class, a `DeleteTagDescriptor` identifying the tags to be deleted will be created from `DeleteTagCommandParser`, which will create and update a new `createTagDeletedPerson` accordingly. This will overwrite the existing `ReadOnlyPerson` Person's Tags while retaining the rest of its attributes as seen from the Model diagram below.
+
+image::ModelClassDiagram.png[width="800"]
+
+As you can see from the `Model` diagram, the `Person` retains the attributes that inherit it except for its own `UniqueTagList`, which is modified only for that particular `Person`.
+
+Suppose that the user has just launched the application.
+
+The user executes a new `DeleteTagCommand`, `delete/t 5 t/friends`, to delete the tag `friends` of the 5th person in the address book. The tags and the index are parsed into `DeleteTagCommandParser` before the `delete/t` command executes.
+
+As the user continues to use the program, he might decide to delete more than one tags. For example, the user may execute `delete/t 2 t/colleagues t/friends` to delete multiple tags.
+
+[NOTE]
+If the tags are not fully matched, it will throw an `Exception`.
+
+The user now decides that deleting the tags was a mistake, and decides to undo that action using `undo`.
+
+Using the `Undo/Redo` stack, we will restore the address book to the state before the `delete/t` command is executed.
+
+[NOTE]
+If the `undoStack` is empty, then there are no other commands left to be undone, and an `Exception` will be thrown when popping the `undoStack`.
+
+==== Design Considerations
+
+**Aspect:** Implementation of `DeleteTagCommand` +
+**Alternative 1 (current choice):** Access the `Person` and overwrite a new `Person` to it. +
+**Pros:** We will not lose the same tags for other `Person` it is now part of the default behaviour. Classes that deal with `Tags` like `UniqueTagsList` do not have to be deleted. +
+**Cons:** Hard for new developers to understand the `UniqueTagsList`. +
+**Alternative 2:** Just delete the `Tag` in the `UniqueTagsList` +
+**Pros:** Does not involve `Person` model, easier for new developers to understand with less coupling. +
+**Cons:** It will defeat the purpose of deleting a tag solely of the specific `Person`. Might take more effort to organise tags for users.
+
+---
+
+**Aspect:** Implementation of `DeleteTagCommandParser` +
+**Alternative 1 (current choice):** Able to utilise `Index` and tag prefix `t/`. +
+**Pros:** Able to delete multiple tags, easy to implement. +
+**Cons:** User will have to type additional prefixes to delete. +
+**Alternative 2:** Not utilising prefix `t/`. +
+**Pros:** Easier and faster to delete with no prefix identifier. +
+**Cons:** Difficult to implement, as it is harder to tokenize the arguments to differentiate between index and tag.
+
+---
+
+**Aspect:** Deleting only a `Person` Tags +
+**Alternative 1 (current choice):** If there are no tags for any `Person`, the `UniqueTagsList` will still contain that tag. +
+**Pros:** Easy to implement. +
+**Cons:** May have performance issues in terms of memory usage. +
+**Alternative 2:** Clean up the `UniqueTagsList` after deleting its last tag. +
+**Pros:** Will use less memory (e.g. for `UniqueTagsList`, will not contain tags that are not present in any `Person`). +
+**Cons:** We must ensure that the implementation for discovering the last tags of the list is correct. May be harder to implement for new developers.
+
+// end::deletepersontag[]
+
 === Logging
 
 We are using `java.util.logging` package for logging. The `LogsCenter` class is used to manage the logging levels and logging destinations.
