--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -27,20 +27,21 @@ This app will not work with earlier versions of Java 8.
 .  Copy the file to the folder you want to use as the home folder for your Address Book.
 .  Double-click the file to start the app. The GUI should appear in a few seconds.
 +
-image::login.png[width="790"]
+
 
 . After login, you will see the GUI below.
 
-image::Ui.png[width="790"]
-+
+image::MockUp.png[width="790"]
+
 .  Type the command in the command box and press kbd:[Enter] to execute it. +
 e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 .  Some example commands you can try:
 
 * *`list`* : lists all contacts
-* **`add`**`n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01 b/13.10.1997` : adds a contact named `John Doe` to the Address Book.
+* **`add`**`n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01 b/13.10.1997 f/nus.jpg` : adds a contact named `John Doe` to the Address Book.
 * **`delete`**`3` : deletes the 3rd contact shown in the current list
 * *`exit`* : exits the app
+* *`photo`* : Add a photo to a person
 
 .  Refer to the link:#features[Features] section below for details of each command.
 
@@ -62,15 +63,15 @@ Format: `help`
 === Adding a person: `add`
 
 Adds a person to the address book +
-Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/DATE_OF_BIRTH [t/TAG]...`
+Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/DATE_OF_BIRTH f/FILE_PATH [t/TAG]...`
 
 [TIP]
 A person can have any number of tags (including 0)
 
 Examples:
 
-* `add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01 b/13.10.1997`
-* `add n/Betsy Crowe t/friend e/betsycrowe@example.com a/Newgate Prison p/1234567 b/13.10.1997 t/criminal`
+* `add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01 b/13.10.1997 f/nus.jpg`
+* `add n/Betsy Crowe t/friend e/betsycrowe@example.com a/Newgate Prison p/1234567 b/13.10.1997 f/nus.jpg t/criminal`
 
 === Listing all persons : `list`
 
@@ -301,6 +302,9 @@ The `redo` command fails as there are no `undo` commands executed previously.
 `redo` (reapplies the `clear` command) +
 // end::undoredo[]
 
+*SINCE V1.2*
+
+
 === Customize tags' color : `color`
 
 Change the color of one or more than one tags. +
@@ -345,6 +349,25 @@ Examples:
 
 * `fs -` +
 
+=== Add Photo to contacts : `photo` +
+
+image::MockUp.png[width="790"]
+
+Adds a Display picture to the contact.The image file must be present on the desktop of the user.
+
+e.g. `Photo 1 Ronak.jpg` adds the image `Ronak.jpg` to the contact with index 1 in the address book.
+
+*Different Scenarios* :
+****
+1) Incorrect File entered - e.g `Photo 1 nus.jpg`
+If 'nus.jpg' is not present on the desktop of the user, a prompt will be displayed to enter the correct file.
+
+2) Delete an existing File - +
+Command - Photo 1 Delete +
+this will delete the photo attached with the person at index 1.
+****
+
+
 === Clearing all entries : `clear`
 
 Clears all entries from the address book. +
@@ -378,7 +401,7 @@ There is no need to save manually.
 == Command Summary
 
 * *Add* `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/DATE_OF_BIRTH [t/TAG]...` +
-e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 1234665 b/13.10.1997 t/friend t/colleague`
+e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 1234665 b/13.10.1997 f/ t/friend t/colleague`
 * *Clear* : `clear`
 * *Delete* : `delete INDEX` +
 e.g. `delete 3`
@@ -392,7 +415,7 @@ e.g. `find James Jake`
 e.g. `find/t friends family`
 * *Customize tag color* : `color c/[COLOR] t/[TAG] t/[TAG] t/[MORE_TAGS]` +
 e.g. `color c/red t/friend t/family`
-* *Chang font size* : `fs [FONT SIZE]` or  `fs +/-` +
+* *Change font size* : `fs [FONT SIZE]` or  `fs +/-` +
 e.g. `fs xs` `fs +` `fs -`
 * *List* : `list`
 * *Help* : `help`
@@ -401,3 +424,5 @@ e.g.`select 2`
 * *History* : `history`
 * *Undo* : `undo`
 * *Redo* : `redo`
+* *Photo Index FilePath* : photo [Index] [FilePath] +
+e.g. `photo 1 nus.jpg`
