Update user guide

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -14,8 +14,38 @@ endif::[]
 
 By: `W13-B2`      Since: `Aug 2017`      Licence: `MIT`
 
+== Product Overview
 
-== Quick Start
+Weaver is a desktop application that has a GUI (Graphical User Interface) but most of the interactions happen using
+a Command Line Interface.Weaver is your personalised addressbook that will make your day to day life easier by letting
+you access the details over your friends and family members as and when you want them.
+
+
+== Introduction
+
+Weaver is a free application to organise contacts.
+
+These are some of the features at a glance:
+
+. You can use Weaver via login to add, remove or clear contacts.
+. You can also edit the details of your contacts, update their profile picture and even use the enhanced tag features to customize your contacts.
+. You can also perform undo or redo if you make any mistakes, and access the help feature for further guidance on the features.
+
+Weaver is available for the Linux, Unix, Windows 10, and Mac OS X Operating System.
+
+
+
+== About
+
+This document shows you how to get started with Weaver.
+
+It gives you a comprehensive overview of the main features, and shows you how to perform the operations with step-by-step instructions to use Weaver.
+
+This document have a FAQ section to address your concerns, and also a command cheatsheet for quick reference at the end of this document.
+
+You are assumed to be familiar with the Command-Line Interface (CLI) with minimal usage of the mouse in order to use Weaver efficiently.
+
+== Getting Started
 
 .  Ensure you have Java version `1.8.0_60` or later installed in your Computer.
 +
@@ -396,11 +426,11 @@ There is no need to save manually.
 == FAQ
 
 *Q*: How do I transfer my data to another Computer? +
-*A*: Install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous Address Book folder.
+*A*: Install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous Address Book folder. +
 *Q*: Is Weaver free? +
 *A*: Yes. +
 *Q*: How can I get the latest version of Weaver? +
-*A*: You can download the jar file from GitHub whenever a new version is released via this link: https://github.com/CS2103AUG2017-W13-B2/main/releases. +
+*A*: You can download the jar file from GitHub whenever a new version is available from link: https://github.com/CS2103AUG2017-W13-B2/main/releases. +
 
 
 == Command Summary
@@ -431,4 +461,3 @@ e.g.`select 2`
 * *Undo* : `undo`
 * *Redo* : `redo`
 * *Help* : `help`
-
