--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,5 @@
 = Weaver
 
-image::docs/images/login.png[width="790"]
-
 ifdef::env-github,env-browser[:relfileprefix: docs/]
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
@@ -19,9 +17,11 @@ endif::[]
 ifndef::env-github[]
 endif::[]
 
-* This is a desktop Address Book application. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface).
-* It is a Java sample application intended for students learning Software Engineering while using Java as the main programming language.
-* It is *written in OOP fashion*. It provides a *reasonably well-written* code example that is *significantly bigger* (around 6 KLoC)than what students usually write in beginner-level SE modules.
+image::docs/images/login.png[width="790"]
+
+* Weaver is a desktop Address Book application. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface). +
+* It is a Java sample application intended to help students studying in National University of Sinagpore. +
+* It is *written in OOP fashion*. It provides a *reasonably well-written* code example that is *significantly bigger* (around 6 KLoC)than what students usually write in beginner-level SE modules. +
 
 == Site Map
 
