--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -76,14 +76,14 @@ Format: `help`
 === Adding a person: `add`
 
 Adds a person to the address book +
-Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/DATE_OF_BIRTH f/FILE_PATH [t/TAG]...`
+Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/DATE_OF_BIRTH f/FILE_PATH r/MODULES_TAKEN_IN_SCHOOL u/[FACEBOOK USERNAME] [t/TAG]...`
 
 [TIP]
 A person can have any number of tags (including 0)
 
 Examples:
 
-* `add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01 b/13.10.1997 f/nus.jpg`
+* `add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01 b/13.10.1997 f//Users/ronaklakhotia/Desktop/Ronak.jpeg r/CS2103T/SEC/1 u/joh.doe`
 * `add n/Betsy Crowe t/friend e/betsycrowe@example.com a/Newgate Prison p/1234567 b/13.10.1997 f/nus.jpg t/criminal`
 
 === Listing all persons : `list`
@@ -94,7 +94,7 @@ Format: `list`
 === Editing a person : `edit`
 
 Edits an existing person in the address book. +
-Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [b/DATE_OF_BIRTH] [t/TAG]...`
+Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [b/DATE_OF_BIRTH] [u/FACEBOOK_USERNAME] [r/MODULES] [f/FILE_IMAGE] [t/TAG]...`
 
 ****
 * Edits the person at the specified `INDEX`. The index refers to the index number shown in the last person listing. The index *must be a positive integer* 1, 2, 3, ...
@@ -371,30 +371,67 @@ Examples:
 
 image::MockUp.png[width="790"]
 
-Adds a Display picture to the contact.The image file must be present on the desktop of the user.
+** Adds a Display picture to the contact.The image file must be present in your PC. +
 
-e.g. `Photo 1 Ronak.jpg` adds the image `Ronak.jpg` to the contact with index 1 in the address book.
+** Each person in your contact list can have atmost one display picture. +
+
+** You can change the display picture of a person by specifying the filepath of another image. +
+
+e.g. `Photo 1 /Users/ronaklakhotia/Desktop/Ronak.jpeg` adds the image `Ronak.jpg` to the contact with
+index 1 in the address book.
 
 *Different Scenarios* :
 ****
-1) Incorrect File entered - e.g `Photo 1 nus.jpg`
-If 'nus.jpg' is not present on the desktop of the user, a prompt will be displayed to enter the correct file.
+1) Incorrect File entered - e.g `Photo 1 /Users/ronaklakhotia/Ronak.jpeg`
+If the file is not present in the specified path, a prompt will be displayed to enter the correct path of the image.
 
 2) Delete an existing File - +
-Command - Photo 1 Delete +
+Command - `Photo 1 Delete` +
 this will delete the photo attached with the person at index 1.
 ****
 
 
-=== FaceBook Integration (SINCE V1.3)
+=== FaceBook Integration (SINCE V1.3) +
 
 Helps you view the profile page of a person in your contact list. +
 
-Command Format - `Facebook [INDEX] [USERNAME OF PERSON ON FACEBOOK]` +
+** The index of the person must be valid. +
 
-e.g. - `facebook 1 ronak.lakhotia`
+** The person must have the username he/she uses on Facebook. +
+
+** You will have to log in to your own account before you view the profile page of the person. +
+
+Command Format - `Facebook [INDEX] +
+
+e.g. - `facebook 1` +
+
+If the person does not have a facebook account or the username is not entered in Weaver,you will be notified by Weaver.
 
 image::facebook.png[width="790"]
+
+=== Reminders Panel (SINCE V1.4) +
+
+Have you ever felt the need to be constantly reminded of your daily assignments.Fret not!Weaver helps you keep up to
+date with your daily school assignments.Just add your reminders using a single command and weaver will display your
+reminders with a image depicting the priority level of that assignment.That way, you can keep scrolling through your
+reminders panel when you open the application and be aware of the upcoming tasks.
+
+
+==== There are three basic commands. +
+
+** Add a reminder to your list. +
+Command Format - `Reminder g/DETAILS p/PRIORITY OF TASK d/DUEDATE +
+e.g. `Reminder g/CS2103T Assignment p/High d/12.11.2017` +
+
+** Remove a reminder from your list. +
+Command Format - `Remove [INDEX OF REMINDER]` +
+e.g. `Remove 1` +
+
+** Change an existing reminder. +
+Command Format - `Change d/13.11.1997` +
+The above command will change the due date of the reminder to the new date. +
+
+
 
 === Clearing all entries : `clear`
 
@@ -452,5 +489,7 @@ e.g.`select 2`
 * *History* : `history`
 * *Undo* : `undo`
 * *Redo* : `redo`
+* *Facebook* : `facebook` +
+e.g. `facebook 1`
 * *Photo Index FilePath* : photo [Index] [FilePath] +
-e.g. `photo 1 nus.jpg`
+e.g. `photo 1 /Users/ronaklakhotia/Desktop/Ronak.jpeg`
