--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -615,13 +615,13 @@ If the `undoStack` is empty, then there are no other commands left to be undone,
 === Adding a photo to a contact in your personalised Weaver.
 
 The add Photo command adds a display picture to a particular contact.The command takes in two parameters, TargetIndex
-that is the index of the person I want to add a photo and the image name with the extension. +
-The command can also be used to delete an existing picture of a person.If the person has no display picture, an exception
+that is the index of the person I want to add a photo and the image filepath. +
+The command can also be used to delete an existing picture of a person.If the person has no display picture and the user attempts to delete a picture, an exception
 will be thrown.
 
 
-Format - photo [INDEX] [IMAGE_NAME.EXTENSION] +
-e.g. `photo 1 Ronak.jpeg` to add an image
+Format - photo [INDEX] [IMAGE_FILEPATH] +
+e.g. `photo 1 /Users/ronaklakhotia/Desktop/Ronak.jpeg` to add an image
 e.g. `photo 1 delete` to delete an existing image.
 
 image::MockUp.png[width="800"]
@@ -630,24 +630,24 @@ The photo command is done with the help of ImageView property in JAVAFX, hence i
 
 *PRE-REQUISITE* +
 There is a pre-requisite for the command to work.The image that is going to be added to the contact must already be
-present on the user's desktop.If it is not so, Weaver is going to prompt the user to add a valid File name.
+present on the user's local PC.If it is not so, Weaver is going to prompt the user to add a valid File path.
 
 The photo Command is inherited from the `UndoableCommand` class.
 
 *Working Flow* +
 
-The `PhotoCommandParser` Class parses the arguments entered in the photo command.The class then throws an Exception with the
-appropriate message depending on whether the File name is not present on the Desktop or if the number of arguments entered
+** The `PhotoCommandParser` Class parses the arguments entered in the photo command.The class then throws an Exception with the
+appropriate message depending on whether the File name is not present in the path specified by the user or if the number of arguments entered
 is not equal to two. +
 
-The `PhotoCommand` class takes care of Invalid conditions like incorrect index. +
+** The `PhotoCommand` class takes care of Invalid conditions like incorrect index. +
 
-It then creates a new instance of the `FileImage` class. `FileImage` is an attribute that every person must have.
+** It then creates a new instance of the `FileImage` class. `FileImage` is an attribute that every person must have.
 A new `Person` is created with the updated `FileImage` and the existing model is updated.
 
 image::PhotoCommand.png[width="800"]
 
-The `ModelManager` class implements the `addPhotoToPerson` method that adds a valid file image as an attribute to the person.
+** The `ModelManager` class implements the `addPhotoToPerson` method that adds a valid file image as an attribute to the person.
 
 ----
     person.imageProperty().setValue( new FileImage(FilePath));
@@ -655,21 +655,25 @@ The `ModelManager` class implements the `addPhotoToPerson` method that adds a va
     indicateAddressBookChanged();
 ----
 
-`ImageStorage` class stores the image of each contact in the directory `/src/main/resources/images`.ImageIO class is used
-for reading and writing of images.Each image is assigned a unique hashcode based on the email-id of the perosn.
+** The filePath entered must be a valid one, else Weaver will throw an exception. +
 
 ----
-image = new BufferedImage(963, 640, BufferedImage.TYPE_INT_ARGB);
-            fileToRead = new File(url);
+ if (FileExists) {
+    try {
+    Index index = ParserUtil.parseIndex(keywords[0]);
+    return new PhotoCommand(index, (keywords[1]));
+            }
+  catch (IllegalValueException ive) {
+                throw new ParseException(
+                        String.format(MESSAGE_INVALID_COMMAND_FORMAT, PhotoCommand.MESSAGE_USAGE));
+            }
 
-image = ImageIO.read(fileToRead);
-
-uniquePath = Integer.toString(newPath);
-
-fileToWrite = new File("src/main/resources/images/" + uniquePath + ".jpg");
-
-ImageIO.write(image, "jpg", fileToWrite);
+        }
 ----
+
+** Once the Image is set and the file is then removed from the specified directory, Weaver will no longer display the picture. +
+
+
 
 *Sequence Diagram*
 
@@ -681,12 +685,12 @@ image::PhotoSequenceDiagram.png[width="800"]
 
 * The index can be used easily used to reference the person. +
 
-* The image gets stored in the local directory , so the user wont have to keep track of his/her copy of the image. +
+* The user can access the image from any directory in the PC. +
 
 ==== Design considerations
 
 **Aspect:** How should the user choose the Image. +
-**Alternative1 (current choice): ** Enter the name of the File present on
+**Alternative1 (current choice): ** Enter the File path present on
 the desktop. +
 **Pros:** Makes use of Commad Line Interface. +
 **Cons:** User has to make sure the file exists on his/her Desktop. +
@@ -698,24 +702,25 @@ any directory. +
 ---
 
 **Aspect:** How should the image be stored. +
-**Alternative1 (current choice):** Image is stored in the `images` directory of the project by invoking `ImageStorage` class. +
+**Alternative1:** Image is stored in the `images` directory of the project by invoking `ImageStorage` class. +
 **Pros:** Each image is assigned a unique hashcode. +
 **Cons:** The working flow is not easy for incomimg developers to follow. +
-**Alternative2:** Image should be stored from Model Component instead of Logic Component. +
+**Alternative2:** Image should be stored in the directory whose path is satisfied. +
 **Pros:** Easy for new developers to comprehend. +
-**Cons:** Two or more people may have the same id which is used to store the image. +
+**Cons:** If the image is removed from the directory, Weaver will have no access to the image. +
 
 // end::addPhoto[]
 
 === FaceBook Integration
 
-The facebook command helps the user to view the profile page of a person on the contact list. +
-It requires the user to login to his/her account before they can view the profile page.The profile +
+** The facebook command helps the user to view the profile page of a person on the contact list. +
+** It requires the user to login to his/her account before they can view the profile page.The profile +
 page is shown up on the browser panel.
+** If the user has no username the facebook page will not be loaded in the browser panel. +
 
-FORMAT - `facebook [INDEX] [USERNAME]`
+** FORMAT - `facebook [INDEX]`
 
-e.g. - `facebook 1 ronak.lakhotia`
+e.g. - `facebook 1`
 
 ==== Working flow
 
